test/bad/unknown-global.fnl
(let [x y]
  (+ z 1))
